--- a/WebContent/inc/css/style.css
+++ b/WebContent/inc/css/style.css
@@ -245,7 +245,7 @@ div#word-mark h1 a {
 
 #hero-section {
   width: 100vw;
-  background: url(../images/bg.jpg) no-repeat center;
+  background: url(../images/bg.png) no-repeat center;
   background-size: cover;
   position: relative;
   z-index: 0;
